--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -40,3 +40,36 @@ jobs:
 
             - name: Run tests
               run: npm run test -- -u
+    
+    deploy:
+        runs-on: ubuntu-latest
+        needs: test
+        steps:
+            - name: Checkout repo
+              uses: actions/checkout@v4
+
+            - name: Setup NodeJs
+              uses: actions/setup-node@v4
+              with:
+                node-version: 20
+            
+            - name: Install dependencies
+              run: npm install
+            
+            - name: Configure AWS credentials
+              uses: aws-actions/configure-aws-credentials@v3
+              with:
+                aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_DEV }}
+                aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_DEV }}
+                aws-region: eu-central-1
+
+            - name: Synth CDK stack
+              run: |
+                npx cdk synth > cdk_output.yaml
+                echo "Synth success"
+
+
+            - name: Deploy CDK Stack
+              run: |
+                npx cdk deploy Koko
+                echo "Deploy success"
