Remove stack name if cdk deploy command in dev workflow.

--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -71,5 +71,5 @@ jobs:
 
             - name: Deploy CDK Stack
               run: |
-                npx cdk deploy Koko
+                npx cdk deploy
                 echo "Deploy success"
