--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -71,5 +71,5 @@ jobs:
 
             - name: Deploy CDK Stack
               run: |
-                npx cdk deploy
+                npx cdk deploy --require-approval never
                 echo "Deploy success"
