--- a/.github/workflows/prod.yaml
+++ b/.github/workflows/prod.yaml
@@ -39,7 +39,7 @@ jobs:
               run: npm install
 
             - name: Run tests
-              run: npm run test
+              run: npm run test -- -u
     
     deploy:
         runs-on: ubuntu-latest
